# django-tutorial

./: Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
mysite/: settings.py  urls.py
mysite/mysite/: settings.py
polls/: models.py  tests.py  views.py
polls/migrations/: 0001_initial.py
polls/static/polls/: style.css
prometheus/: prometheus.yml
